--- a/Pilas y Colas/Pilas y Colas.ipynb
+++ b/Pilas y Colas/Pilas y Colas.ipynb
@@ -3,326 +3,386 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3ad493c",
+   "id": "85536947",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "valor = input()"
+    "pila = [3, 4, 5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ec86110",
+   "id": "ee48f210",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(valor)"
+    "pila.append(6)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "58de936a",
+   "id": "43e92690",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "145\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "valor = input()"
+    "pila.append(7)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "caba5b38",
+   "id": "f348595c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'145'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 7]\n"
+     ]
     }
    ],
    "source": [
-    "valor"
+    "print(pila)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "91cb5985",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce por teclado el valorprueba\n"
-     ]
-    }
-   ],
-   "source": [
-    "valor = input(\"Introduce por teclado el valor\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "07896449",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prueba\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(valor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9055936a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce por teclado el valor45\n"
-     ]
-    }
-   ],
-   "source": [
-    "valor = int(input(\"Introduce por teclado el valor\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4f2ff027",
+   "id": "f33cee1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "45"
+       "7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "valor"
+    "pila.pop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6ef1684f",
+   "execution_count": 6,
+   "id": "0a41c1bc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce por teclado el valorhola\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'hola'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m valor \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIntroduce por teclado el valor\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'hola'"
+      "[3, 4, 5, 6]\n"
      ]
     }
    ],
    "source": [
-    "valor = int(input(\"Introduce por teclado el valor\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ea0c1bae",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce por teclado el valor50\n"
-     ]
-    }
-   ],
-   "source": [
-    "valor = int(input(\"Introduce por teclado el valor\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c658a647",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "150\n"
-     ]
-    }
-   ],
-   "source": [
-    "suma = valor + 100\n",
-    "print(suma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "9d7fa085",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce por teclado el valor3.14\n"
-     ]
-    }
-   ],
-   "source": [
-    "valor = float(input(\"Introduce por teclado el valor\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "cae166da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.14\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(valor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "d32902ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce 3 valores:\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Introduce 3 valores:\")"
+    "print(pila)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d09c6554",
+   "id": "e30c172f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "valores = []"
+    "n = pila.pop()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e16bad74",
+   "id": "bdf07d45",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "introduce un valor: Hola\n",
-      "introduce un valor: 2\n",
-      "introduce un valor: 2.3\n"
+      "[3, 4, 5]\n"
      ]
     }
    ],
    "source": [
-    "for x in range(3):\n",
-    "    valores.append(input(\"introduce un valor: \"))"
+    "print(pila)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "368e94f9",
+   "id": "23109d86",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hola', '2', '2.3']\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "print(valores)"
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ac3735b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pila.pop()\n",
+    "pila.pop()\n",
+    "pila.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4f56afee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pila)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "31980638",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pila\u001b[38;5;241m.\u001b[39mpop()\n",
+      "\u001b[1;31mIndexError\u001b[0m: pop from empty list"
+     ]
+    }
+   ],
+   "source": [
+    "pila.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "17b3e902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "69223efb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cola = deque()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "41560160",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cola"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2c3d6357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['Hector', 'Juan', 'Miguel'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "cola = deque(['Hector', 'Juan', 'Miguel'])\n",
+    "print(cola)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "490e13ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cola.append('Maria')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ff11c918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cola.append('Ariel')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d143c25e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['Hector', 'Juan', 'Miguel', 'Maria', 'Ariel'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cola)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1d189fc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hector'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cola.popleft()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "52fc4b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['Juan', 'Miguel', 'Maria', 'Ariel'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cola)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8f557929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = cola.popleft()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c4ff2d28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bc7f604d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['Miguel', 'Maria', 'Ariel'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cola)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ae7efb",
+   "id": "4b694c67",
    "metadata": {},
    "outputs": [],
    "source": []
